--- a/composer.json
+++ b/composer.json
@@ -22,5 +22,10 @@
     "support": {
         "issues": "https://github.com/pyncerrc/pyncer-data/issues",
         "source": "https://github.com/pyncerrc/pyncer-data"
+    },
+    "extra" : {
+        "branch-alias" : {
+            "dev-main" : "1.0-dev"
+        }
     }
 }
