--- a/composer.json
+++ b/composer.json
@@ -8,10 +8,11 @@
         "php": ">=8.1",
         "psr/http-message": "^1.0.1",
         "pyncer/core": "^1.1",
-        "pyncer/database": "^1.0",
+        "pyncer/database": "^1.1",
         "pyncer/exception": "^1.0",
+        "pyncer/http": "^1.1",
         "pyncer/iterable": "^1.1",
-        "pyncer/utility": "^1.0",
+        "pyncer/utility": "^1.0.1",
         "pyncer/validation": "^1.1"
     },
     "autoload": {
@@ -27,5 +28,9 @@
         "branch-alias" : {
             "dev-main" : "1.3-dev"
         }
+    },
+    "require-dev": {
+        "phpstan/phpstan": "^1.10",
+        "phpunit/phpunit": "^10.3"
     }
 }
